force-app/main/default/objects/ProductOffer__c/ProductOffer__c.object-meta.xml
<CustomObject>
    <label>Product Offer</label>
    <nameField>
        <label>Product Offer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Offers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>