force-app/main/default/objects/ProductOffer__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>Coupon__r.Expiry_Date__c &gt;= TODAY()&amp;&amp; 
!Coupon__r.Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>