force-app/main/default/objects/ProductOffer__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <label>Coupon</label>
    <referenceTo>Coupons__c</referenceTo>
    <relationshipLabel>Product Offers</relationshipLabel>
    <relationshipName>Product_Offers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>