force-app/main/default/objects/ProductOffer__c/validationRules/Product_vr.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_vr</fullName>
    <active>true</active>
    <description>Product field is required</description>
    <errorConditionFormula>ISBLANK(Product__c)</errorConditionFormula>
    <errorDisplayField>Product__c</errorDisplayField>
    <errorMessage>Product field is required</errorMessage>
</ValidationRule>