force-app/main/default/objects/ProductOffer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Coupon__c</columns>
    <columns>Product__c</columns>
    <columns>Sequence__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>